--- a/Home.html
+++ b/Home.html
@@ -45,19 +45,22 @@
     <main class="main">
         <section class="hero__section">
             <div class="hero__container">
-                <div class="hero__heading">Check your attendence</div>
-                <div class="hero__content">Your OOP attendence percentage is below 75%.</div>
+                <div class="hero__heading">Check Your Attendance</div>
+                <div class="hero__content">Your OOP attendance percentage is below 75%.</div>
                 <div class="hero__content">Do attend classes regularly.</div>
+                <div><img src="img/42-423625_anxious-child-anxious-child-clipart-removebg-preview.png" alt="" srcset="" class="hero__container__img"></div>
             </div>
             <div class="hero__container">
-                <div class="hero__heading">Check your attendence</div>
-                <div class="hero__content">Your OOP attendence percentage is below 75%.</div>
-                <div class="hero__content">Do attend classes regularly.</div>
+                <div class="hero__heading">VISA Internship Drive</div>
+                <div class="hero__content">Supercharge Your Career!Visa Internship Drive is Now Open Click to Embark on a Journey of Limitless Opportunities! </div>
+                <div class="hero__content"> Don't Miss Out Your Future Awaits!</div>
+                <div><img src="img/program-code-icon-blue-background-with-circuit-elements-3d_327483-702-removebg-preview.png" alt="" srcset="" class="hero__container__img"></div>
             </div>
             <div class="hero__container">
-                <div class="hero__heading">Check your attendence</div>
-                <div class="hero__content">Your OOP attendence percentage is below 75%.</div>
-                <div class="hero__content">Do attend classes regularly.</div>
+                <div class="hero__heading">Web Dev WorkShop</div>
+                <div class="hero__content">Dive into the Future of Web Development at IIT Madras!Join Our Exclusive Workshop Unleash Your Coding Skills.</div>
+                <div class="hero__content">Ignite Your Creativity!Limited Slots Available, Act Fast!</div>
+                <div class="hero__img__container"><img src="img/program-code-icon-blue-background-with-circuit-elements-3d_327483-702-removebg-preview.png" alt="" class="hero__container__img"></div>
             </div>
         </section>
 
@@ -98,23 +101,23 @@
                 <div class="home__alert__heading">Alert:</div>
                 <div class="home__alert__container">
                     <div class="home__alert__container__attendence">
-                        <div class="home__alert__container__attendence__heading">Attendence</div>
+                        <div class="home__alert__container__attendence__heading">Attendance</div>
                         <div class="home__alert__container__attendence__container">
-                            <div class="home__alert__container__attendence__content">Your OOP attendence percentage is below 75%.Do attend classes regularly.</div>
-                            <div class="home__alert__container__attendence__link"><a href="#" >Check Attendence</a></div>
+                            <div class="home__alert__container__attendence__content">Your OOP attendance percentage is below 75%.Do attend classes regularly.</div>
+                            <div class="home__alert__container__attendence__link"><a href="#" >Check Attendance</a></div>
                         </div>
                         <div class="home__alert__container__attendence__container">
-                            <div class="home__alert__container__attendence__content">Your OOP attendence percentage is below 75%.Do attend classes regularly.</div>
-                            <div class="home__alert__container__attendence__link"><a href="#">Check Attendence</a></div>
+                            <div class="home__alert__container__attendence__content">Your OOP attendance percentage is below 75%.Do attend classes regularly.</div>
+                            <div class="home__alert__container__attendence__link"><a href="#">Check Attendance</a></div>
                         </div>
                         <div class="home__alert__container__attendence__container">
-                            <div class="home__alert__container__attendence__content">Your OOP attendence percentage is below 75%.Do attend classes regularly.</div>
-                            <div class="home__alert__container__attendence__link"><a href="#" class="home__alert__container__attendence__link">Check Attendence</a></div>
+                            <div class="home__alert__container__attendence__content">Your OOP attendance percentage is below 75%.Do attend classes regularly.</div>
+                            <div class="home__alert__container__attendence__link"><a href="#" class="home__alert__container__attendence__link">Check Attendance</a></div>
                         </div>
                     </div>
 
                     <div class="home__alert__container__meeting">
-                        <div class="home__alert__container__meeting__heading">Todays's Happening</div>
+                        <div class="home__alert__container__meeting__heading">Today's Happening</div>
                         <div class="home__alert__container__meeting__container">
                             <div class="home__alert__container__meeting__content">PSG tech is organising cricket summer camp from today for 10 days.</div>
                             <div class="home__alert__container__meeting__link"><a href="#" >Read More</a></div>
@@ -223,6 +226,7 @@
             </div>
 
         </section>
+
         <section class="home__application__section ">
            <div class=" home__application">
             <div class="home__application-content-box">
@@ -258,6 +262,6 @@
            </div>
         </section>
     </main>
-        
+    
 </body>
 </html>
