--- a/Landing.html
+++ b/Landing.html
@@ -83,7 +83,7 @@
                 </p>
 
                 <form action="" class="newsletter__form">
-                    <input type="text" placeholder="Entr Your Email" class="newsletter__input">
+                    <input type="text" placeholder="Enter Your Email" class="newsletter__input">
                     <button type="submit" class="newsletter__btn">Subscribe</button>
                 </form>
             </div>
